Add a target to perform the metadata import transform.